--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -60,11 +60,11 @@
 			</div>
 			<div class="mui-input-row">
 				<label>已收保证金：</label>
-				<input type="text" class="mui-input-clear" id="inPotoDel" disabled>
+				<input type="text" class="mui-input-clear" id="inMoneyReceive" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>保证金比例：</label>
-				<input type="text" class="mui-input-clear" id="inPoLastDa" disabled>
+				<input type="text" class="mui-input-clear" id="inMarginLevel" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>期望收货时间：</label>
