--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/ApplyPayList.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/ApplyPayList.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>支付单列表</title>
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link href="../css/app.css" rel="stylesheet" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/app.css" rel="stylesheet" />
     	<style type="text/css">
  			.mui-content div.content_part li {padding: 0;list-style: none;}
 			.mui-content div.ctn_li_h li {height: 30px;}
@@ -34,9 +34,9 @@
 	<input id="applyPayId" class="applyPayId" type="hidden" />
 	<input id="applyPayMoney" class="applyPayMoney" type="hidden" />
 	
-	<script src="../js/component/mui.min.js"></script>
-	<script src="../js/component/zepto.min.js"></script>
-	<script src="../js/component/GHutils.js"></script>
-	<script src="../js/custom/ApplyPayList.js"></script>
+	<script src="../../js/component/mui.min.js"></script>
+	<script src="../../js/component/zepto.min.js"></script>
+	<script src="../../js/component/GHutils.js"></script>
+	<script src="../../js/custom/ApplyPayList.js"></script>
     </body>
 </html>
