--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/backstagemgmt.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/backstagemgmt.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>运营管理后台</title>
-    <link href="../css/mui.min.css" rel="stylesheet"/>
-    <link href="../css/app.css" rel="stylesheet"/>
+    <link href="../../css/mui.min.css" rel="stylesheet"/>
+    <link href="../../css/app.css" rel="stylesheet"/>
     <style type="text/css">/** app.css ==> app-001 **/</style>
     <style type="text/css">
         .app_lh25 {
@@ -180,10 +180,10 @@
 	</div>
 	<div class="clear"></div>
 
-	<script src="../js/component/mui.min.js"></script>
-	<script src="../js/component/zepto.min.js"></script>
-	<script src="../js/component/GHutils.js"></script>
-	<script src="../js/custom/backstagemgmt.js"></script>
+	<script src="../../js/component/mui.min.js"></script>
+	<script src="../../js/component/zepto.min.js"></script>
+	<script src="../../js/component/GHutils.js"></script>
+	<script src="../../js/custom/backstagemgmt.js"></script>
 	<script type="text/javascript">
 	//  $.get('/a/biz/po/bizPoHeader/form4Mobile', {"id":911}, function (data) {
 	//      console.info(data);
