--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/management.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/management.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>运营管理</title>
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link href="../css/app.css" rel="stylesheet" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/app.css" rel="stylesheet" />
 	</head>
 	<body>
 		 <header class="mui-bar mui-bar-nav">  
@@ -20,10 +20,10 @@
                 </ul>  
             </div>
 		</div>  
-		<script src="../js/component/mui.min.js"></script>
-		<script src="../js/component/zepto.min.js"></script>
-		<script src="../js/component/GHutils.js"></script>
-		<script src="../js/custom/management.js"></script>
+		<script src="../../js/component/mui.min.js"></script>
+		<script src="../../js/component/zepto.min.js"></script>
+		<script src="../../js/component/GHutils.js"></script>
+		<script src="../../js/custom/management.js"></script>
         
 	</body>
 </html>
