--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
@@ -8,9 +8,9 @@
 		<meta name="full-screen" content="yes">
 		<meta name="x5-fullscreen" content="true">
 		<title>采购单管理</title>
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link href="../css/app.css" rel="stylesheet" />
-		<link href="../css/drop.css" rel="stylesheet" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/drop.css" rel="stylesheet" />
     	<style type="text/css">
 			* {
 				margin: 0;
@@ -163,11 +163,11 @@
 				
 			</div>
 		</div>
-		<script src="../js/component/zepto.min.js"></script>
-		<script src="../js/component/mui.min.js"></script>
-		<script src="../js/component/GHutils.js"></script>
-		<script src="../js/component/dropload.js"></script>
-		<script src="../js/custom/purchase.js"></script>
+		<script src="../../js/component/zepto.min.js"></script>
+		<script src="../../js/component/mui.min.js"></script>
+		<script src="../../js/component/GHutils.js"></script>
+		<script src="../../js/component/dropload.js"></script>
+		<script src="../../js/custom/purchase.js"></script>
 
 	</body>
 
