--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/login.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>登录</title>
-    <link href="../css/mui.min.css" rel="stylesheet"/>
-    <link href="../css/app.css" rel="stylesheet"/>
+    <link href="../../css/mui.min.css" rel="stylesheet"/>
+    <link href="../../css/app.css" rel="stylesheet"/>
     <style type="text/css">
         html, body {
             height: 100%;
@@ -163,10 +163,10 @@
 
 </div>
 
-<script src="../js/component/mui.min.js"></script>
-<script src="../js/component/zepto.min.js"></script>
-<script src="../js/component/GHutils.js"></script>
-<script src="../js/custom/usermgmt-login.js"></script>
+<script src="../../js/component/mui.min.js"></script>
+<script src="../../js/component/zepto.min.js"></script>
+<script src="../../js/component/GHutils.js"></script>
+<script src="../../js/custom/usermgmt-login.js"></script>
 <script type="text/javascript">
     function clearCookie(){
         var keys=document.cookie.match(/[^ =;]+(?=\=)/g);
