--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/startCheck.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/startCheck.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>开启审核</title>
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link href="../css/app.css" rel="stylesheet" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/app.css" rel="stylesheet" />
     	<style type="text/css">
  			.mui-content div.content_part li {padding: 0;list-style: none;}
 			.mui-content div.ctn_li_h li {height: 30px;}
@@ -175,10 +175,10 @@
 		</div>	
 	<div class="clear"></div>
 
-	<script src="../js/component/mui.min.js"></script>
-	<script src="../js/component/zepto.min.js"></script>
-	<script src="../js/component/GHutils.js"></script>
-	<script src="../js/custom/startCheck.js"></script>
+	<script src="../../js/component/mui.min.js"></script>
+	<script src="../../js/component/zepto.min.js"></script>
+	<script src="../../js/component/GHutils.js"></script>
+	<script src="../../js/custom/startCheck.js"></script>
     </body>
 </html>
 
