--- a/src/main/webapp/static/mobile/html/user.html
+++ b/src/main/webapp/static/mobile/html/user.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>用户信息</title>
-		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link href="../css/app.css" rel="stylesheet" />
 		<style>
 			#appQuit {
 	            background-color: #dd5563;
@@ -42,10 +42,10 @@
 				</a>
 	        </div>
 		</div>
-		<script src="../../js/component/mui.min.js"></script>
-		<script src="../../js/component/zepto.min.js"></script>
-		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/custom/user.js"></script>
+		<script src="../js/component/mui.min.js"></script>
+		<script src="../js/component/zepto.min.js"></script>
+		<script src="../js/component/GHutils.js"></script>
+		<script src="../js/user.js"></script>
 	</body>
 
 </html>
