--- a/src/main/webapp/static/mobile/html/backstagemgmt.html
+++ b/src/main/webapp/static/mobile/html/backstagemgmt.html
@@ -171,7 +171,8 @@
 </head>
 <body>
 	<header class="mui-bar mui-bar-nav">
-	    <h1 class="mui-title">运营管理后台</h1>
+		<a class="mui-icon mui-icon-bars mui-pull-right app_cf"></a>  
+	    <h1 id="userName" class="mui-title">userName</h1>
 	</header>
 	<div class="mui-content">
 	    <ul class="mui-table-view  mui-grid-view app_notborder app_bnp app_f16" id="htmlMenu">
@@ -184,10 +185,5 @@
 	<script src="../js/component/zepto.min.js"></script>
 	<script src="../js/component/GHutils.js"></script>
 	<script src="../js/backstagemgmt.js"></script>
-	<script type="text/javascript">
-	//  $.get('/a/biz/po/bizPoHeader/form4Mobile', {"id":911}, function (data) {
-	//      console.info(data);
-	//  });
-	</script>
 </body>
 </html>
