--- a/src/main/webapp/static/mobile/html/management.html
+++ b/src/main/webapp/static/mobile/html/management.html
@@ -6,6 +6,9 @@
 		<title>运营管理</title>
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link href="../css/app.css" rel="stylesheet" />
+		<style>
+			.mui-table-view-cell p {margin-bottom: 5px;}
+		</style>
 	</head>
 	<body>
 		 <header class="mui-bar mui-bar-nav">  
