--- a/src/main/webapp/static/mobile/html/backstagemgmt.html
+++ b/src/main/webapp/static/mobile/html/backstagemgmt.html
@@ -172,6 +172,7 @@
             border: none;
             border-radius: 8px;
         }
+        #quitBtn {position: fixed;bottom: 80px;width: 300px;left: 50%;margin-left: -150px;}
     </style>
 </head>
 <body>
@@ -183,7 +184,7 @@
 	
 	    </ul>
 	</div>
-	<div class="app_ml25 app_mr25 app_mt60">
+	<div id="quitBtn">
         <a href="/a/logout">
 			<button id="appQuit" type="button" class="mui-btn mui-btn-primary mui-btn-block">
            	 退出登录
