--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -147,13 +147,12 @@
  			.mui-input-group div.mui-input-row {background-color:#fff;}
  			.selectStyle {margin-bottom: 0;}
  			.menuMarg {margin: 0 2px;border-radius:5px;}
- 			#searchBtn {background-color: #374761;padding: 30px;}
 		</style>
 	</head>
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<!--<span id="search_btn" class="mui-icon mui-icon-bars mui-pull-right app_cf"></span>-->
+		    <span id="searchBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">备货单管理</p>
 		</header>
 		<div class="content mui-content">
