--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -28,15 +28,73 @@
 			.sucessColor {
 				color: #40ABE9;
 			}
-			#addCommodity {font-size: 13px;}
+			
+			#addCommodity {
+				font-size: 13px;
+			}
+			
 			#addCommodity div.mui-input-row>input {
 				padding: 0;
 			}
+			
 			#addCommodity div.mui-input-row>label {
 				padding: 0;
 			}
-			.photoParent {width: 15%;height: 220px;}
-			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
+			
+			.photoTop {
+				width: 15%;
+				height: 140px;
+			}
+			
+			.photoTop img {
+				top: 50%;
+				margin-top: -8px;
+				width: 50px;
+			}
+			
+			.photoParent {
+				width: 15%;
+				height: 220px;
+			}
+			
+			.photoParent img {
+				top: 50%;
+				margin-top: -8px;
+				width: 50px;
+			}
+			
+			.comChoiceBtn {
+				padding: 5px;
+				border: none;
+				width: 50px;
+				position: absolute;
+				right: 10px;
+				top: 6px;
+			}
+			
+			.mui-bar-nav~.mui-content {
+				background-color: #efeff4;
+			}
+			
+			.mui-input-group .mui-input-row {
+				border-radius: none;
+			}
+			
+			.mui-input-row>ul>li {
+				border-bottom: 1px solid #40ABE9;
+			}
+			
+			.addBtn {
+				width: 30%;
+				margin: 5px auto;
+			}
+			.saveBtn {
+				width: 80%;
+				margin: 5px auto;
+			}
+			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 68px;}
+			.mui-input-row font {color:red;position: absolute;right: 60px;top: 30%;}
+			.addBtnClass {padding: 0;}
 		</style>
 	</head>
 
@@ -49,14 +107,100 @@
 			<div class="mui-input-row">
 				<label>采购中心：</label>
 				<input type="text" class="mui-input-clear" id="inAddOrordNum">
+				<font>*</font>
 			</div>
 			<div class="mui-input-row">
 				<label>期望收货时间：</label>
-				<input type="data" class="mui-input-clear" id="inAddPoLastDa">
+				<input type="date" class="mui-input-clear" id="inAddPoLastDa">
+				<font>*</font>
 			</div>
-			<div class="mui-input-row">
+			<div class="mui-input-row app_mb10">
 				<label>选择商品：</label>
-				<input type="text" class="mui-input-clear" id="inAddPoLastDa" placeholder="请点击选择商品">
+				<input type="text" class="mui-input-clear" id="inAddPoLastDa" placeholder="请输入商品货号">
+				<button id="comChoiceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
+				<div class="mui-input-row">
+					<ul id="choiceCommodityMenu" class="mui-table-view">
+						<li class="mui-table-view-cell mui-media">
+							<!--产品图片-->
+							<div class="photoTop mui-pull-left position_Re">
+								<img class="position_Ab" src="../images/shuijiao.jpg">
+							</div>
+							<!--产品信息-->
+							<div id="addCommodity" class="mui-media-body">
+								<div class="mui-input-row">
+									<label>品牌名称：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>供应商：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>商品名称：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>商品编码：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>商品货号：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>工厂价：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>申报数量：</label>
+									<input type="text" class="mui-input-clear" id="">
+								</div>
+
+							</div>
+						</li>
+						<li class="mui-table-view-cell mui-media">
+							<!--产品图片-->
+							<div class="photoTop mui-pull-left position_Re">
+								<img class="position_Ab" src="../images/shuijiao.jpg">
+							</div>
+							<!--产品信息-->
+							<div id="addCommodity" class="mui-media-body">
+								<div class="mui-input-row">
+									<label>品牌名称：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>供应商：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>商品名称：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>商品编码：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>商品货号：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>工厂价：</label>
+									<input type="text" class="mui-input-clear" id="" disabled>
+								</div>
+								<div class="mui-input-row">
+									<label>申报数量：</label>
+									<input type="text" class="mui-input-clear" id="">
+								</div>
+
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="addBtn">
+					<button id="" type="submit" class="addBtnClass app_btn_search mui-btn-blue mui-btn-block">添加</button>
+				</div>
 			</div>
 			<div class="mui-input-row">
 				<div class="labelLf">备货商品：</div>
@@ -114,13 +258,16 @@
 			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
-				<textarea id="inPoRemark" name="" rows="" cols="" disabled></textarea>
+				<textarea id="inPoRemark" name="" rows="" cols=""></textarea>
 			</div>
 			<div class="mui-input-row">
 				<label>业务状态：</label>
-				<input type="text" class="mui-input-clear" id="inPoDizstatus" disabled>
+				<input type="text" class="mui-input-clear" id="inPoDizstatus">
+				<font>*</font>
 			</div>
-			
+			<div class="saveBtn">
+				<button id="" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
+			</div>
 		</div>
 		<input id="inStatus" name="inStatus" type="hidden" />
 		<div class="clear"></div>
