--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
@@ -155,7 +155,7 @@
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<!--<span id="search_btn" class="mui-icon mui-icon-bars mui-pull-right app_cf"></span>-->
+			<span id="search_btn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">采购单管理</p>
 		</header>
 		<div class="content mui-content">
