--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
@@ -80,6 +80,7 @@
 			}
 			.mui-input-row input.newinput {padding-left: 0;}
 			.secStyle {margin: 5px 0;}
+			#hideSpan {position: absolute;right: 89px;top: 36px;border: 1px solid rgb(204, 204, 204);border-radius: 13px;display: none;}
 		</style>
 	</head>
 
@@ -102,6 +103,7 @@
 					<label>供应商：</label>
 					<div class="pre">
 						<input class="newinput" type="text" placeholder="请选择供应商">
+						<span class="mui-icon mui-icon-closeempty" id="hideSpan"></span>
 						<div id="supplierNum" class="input_div" style="display: none;">
 							
 						</div>
