--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
@@ -149,6 +149,7 @@
  			.selectStyle {margin-bottom: 0;}
  			.menuMarg {margin: 0 2px;border-radius:5px;}
  			#searchBtn {background-color: #374761;padding: 30px;}
+ 			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
 		</style>
 	</head>
 
