--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
@@ -63,6 +63,7 @@
 			.input_div {
 				width: 150px;
 				border: 1px solid #ddd;
+				border-bottom: none;
 				border-radius: 0 0 3px 3px;
 				display: none;
 			}
@@ -80,7 +81,7 @@
 			}
 			.mui-input-row input.newinput {padding-left: 0;}
 			.secStyle {margin: 5px 0;}
-			#hideSpan {position: absolute;right: 89px;top: 36px;border: 1px solid rgb(204, 204, 204);border-radius: 13px;display: none;}
+			#hideSpan {position: absolute;right: 77px;top: 49px;border: 1px solid rgb(204, 204, 204);border-left: none;display: none;}
 		</style>
 	</head>
 
