--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -80,7 +80,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>业务状态：</label>
-				<input type="text" class="mui-input-clear" id="inPoDizstatus" disabled>
+				<input type="text" id="inPoDizstatus" class="mui-input-clear" disabled>
 			</div>
 			<!--审批流程块 有的话显示-->
 			<div class="mui-input-row">
